showing all clusters with the appropriate icon, text overlayed in the middle. (ugly)

--- a/app/views/maps_test/show_map.html.erb
+++ b/app/views/maps_test/show_map.html.erb
@@ -67,9 +67,9 @@
             };
             var map = new google.maps.Map(document.getElementById("map"), options);
 
-            //google.maps.event.addListenerOnce(map, 'bounds_changed', function(){
+            google.maps.event.addListenerOnce(map, 'bounds_changed', function(){
                 setupMarkers(map);
-            //});
+            });
             return map;
         }
 
@@ -92,23 +92,44 @@
                 { url: imageUrl, width:32, height: 37 }
             ];
             return {
-                maxZoom: 17
-//                styles: style
+                gridSize: 65,
+                maxZoom: 18,
+                styles: style
             }
         }
 
         function setupMarkers(map) {
 
-            var trough = new MarkerClusterer(map, createMarkerList(Horse_Trough, 'http://google-maps-icons.googlecode.com/files/horseriding.png', map), buildOptions('http://google-maps-icons.googlecode.com/files/speed130.png'));
-            var bin = new MarkerClusterer(map, createMarkerList(Litter_Bin, 'http://google-maps-icons.googlecode.com/files/trash.png', map), buildOptions('http://google-maps-icons.googlecode.com/files/speed130.png'));
-//            var info = new MarkerClusterer(map, createMarkerList(Information_Pillar, 'http://google-maps-icons.googlecode.com/files/info.png', map), buildOptions('http://google-maps-icons.googlecode.com/files/speed130.png'));
-//            var seat = new MarkerClusterer(map, createMarkerList(Seat, 'http://google-maps-icons.googlecode.com/files/bench.png', map), buildOptions('http://google-maps-icons.googlecode.com/files/speed130.png'));
-//            var drink = new MarkerClusterer(map, createMarkerList(Drinking_Fountain, 'http://google-maps-icons.googlecode.com/files/drinkingfountain.png', map), buildOptions('http://google-maps-icons.googlecode.com/files/speed130.png'));
-//            var picnic = new MarkerClusterer(map, createMarkerList(Picnic_Setting, 'http://google-maps-icons.googlecode.com/files/picnic.png', map), buildOptions('http://google-maps-icons.googlecode.com/files/speed130.png'));
-//            var rails = new MarkerClusterer(map, createMarkerList(Bicycle_Rails.concat(Hoop), 'http://google-maps-icons.googlecode.com/files/bicycleparking.png', map), buildOptions('http://google-maps-icons.googlecode.com/files/speed130.png'));
-//            var corral = new MarkerClusterer(map, createMarkerList(Bin_Corral, 'http://google-maps-icons.googlecode.com/files/trash.png', map), buildOptions('http://google-maps-icons.googlecode.com/files/speed130.png'));
-//            var equip = new MarkerClusterer(map, createMarkerList(Recreation_Equipment_Item, 'http://google-maps-icons.googlecode.com/files/basketball.png', map), buildOptions('http://google-maps-icons.googlecode.com/files/speed130.png'));
-//            var bbq = new MarkerClusterer(map, createMarkerList(Barbeque, 'http://google-maps-icons.googlecode.com/files/restaurant-barbecue.png', map), buildOptions('http://google-maps-icons.googlecode.com/files/speed130.png'));
+            var trough = new MarkerClusterer(map,
+                    createMarkerList(Horse_Trough, 'http://google-maps-icons.googlecode.com/files/horseriding.png', map),
+                    buildOptions('http://google-maps-icons.googlecode.com/files/horseriding.png'));
+            var bin = new MarkerClusterer(map,
+                    createMarkerList(Litter_Bin, 'http://google-maps-icons.googlecode.com/files/trash.png', map),
+                    buildOptions('http://google-maps-icons.googlecode.com/files/trash.png'));
+            var info = new MarkerClusterer(map,
+                    createMarkerList(Information_Pillar, 'http://google-maps-icons.googlecode.com/files/info.png', map),
+                    buildOptions('http://google-maps-icons.googlecode.com/files/info.png'));
+            var seat = new MarkerClusterer(map,
+                    createMarkerList(Seat, 'http://google-maps-icons.googlecode.com/files/bench.png', map),
+                    buildOptions('http://google-maps-icons.googlecode.com/files/bench.png'));
+            var drink = new MarkerClusterer(map,
+                    createMarkerList(Drinking_Fountain, 'http://google-maps-icons.googlecode.com/files/drinkingfountain.png', map),
+                    buildOptions('http://google-maps-icons.googlecode.com/files/drinkingfountain.png'));
+            var picnic = new MarkerClusterer(map,
+                    createMarkerList(Picnic_Setting, 'http://google-maps-icons.googlecode.com/files/picnic.png', map),
+                    buildOptions('http://google-maps-icons.googlecode.com/files/picnic.png'));
+            var rails = new MarkerClusterer(map,
+                    createMarkerList(Bicycle_Rails.concat(Hoop), 'http://google-maps-icons.googlecode.com/files/bicycleparking.png', map),
+                    buildOptions('http://google-maps-icons.googlecode.com/files/bicycleparking.png'));
+            var corral = new MarkerClusterer(map,
+                    createMarkerList(Bin_Corral, 'http://google-maps-icons.googlecode.com/files/trash.png', map),
+                    buildOptions('http://google-maps-icons.googlecode.com/files/trash.png'));
+            var equip = new MarkerClusterer(map,
+                    createMarkerList(Recreation_Equipment_Item, 'http://google-maps-icons.googlecode.com/files/basketball.png', map),
+                    buildOptions('http://google-maps-icons.googlecode.com/files/basketball.png'));
+            var bbq = new MarkerClusterer(map,
+                    createMarkerList(Barbeque, 'http://google-maps-icons.googlecode.com/files/restaurant-barbecue.png', map),
+                    buildOptions('http://google-maps-icons.googlecode.com/files/restaurant-barbecue.png'));
 
         }
 
