--- a/app/views/maps_test/show_map.html.erb
+++ b/app/views/maps_test/show_map.html.erb
@@ -1,200 +1,288 @@
 <html>
 <head>
-  <title>Google maps example</title>
+<title>Melbourne Street Furniture Warehouse</title>
 
-  <style>
-    #map {width:600px;height:400px;}
-    #categories {float:right;}
-    #category_list {border: 2px solid #000;}
-    #category_list ul {list-style: none inside;}
-    #category_list li {list-style-type: none; margin: 5px;}
-    .template {display: none;}
-  </style>
-  
-    <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    <script src="/javascripts/markerclusterer.js"></script>
-    <script src="/javascripts/data.js"></script>
-    <script src="/javascripts/jquery-1.4.2.js"></script>
+<style>
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+    }
 
-    <script type="text/javascript">
-        function createMarker(map,item,iconUrl) {
+    #container {
+        width: 1000px;
+        height: 90%;
+        margin-right: auto;
+        margin-left: auto;
+        background: url(/images/SFW_bottom.png) bottom no-repeat;
+        background-color: #F0F0F0;
+        margin-top: 40px;
+    }
+
+    #header {
+        position: relative;
+        left: 0;
+        top: 0;
+        display: block;
+        height: 50px;
+        width: 1000px;
+        background: url(/images/SFW_banner.jpg) no-repeat;
+    }
+
+    .title {
+        font-size: 140%;
+        font-weight: bold;
+        color: #FFF;
+        letter-spacing: -1px;
+        position: absolute;
+        top: 25%;
+        left: 30px;
+    }
+
+    #content {
+        padding: 40px 30px 40px 30px;
+        background-color: #FFF;
+    }
+
+    #categories {
+        float: right;
+        width: 240px;
+        font-size: 80%;
+    }
+
+    #categories ul {
+        background-color: #eaeaea;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    #category_list li {
+        padding: 2px 4px 2px 10px;
+    }
+
+    #search_box {
+        background-color: #eaeaea;
+        list-style: none;
+        padding: 0 5px 0 5px;
+        margin: 0;
+    }
+
+    input.go_button {
+        font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+        border: 1px solid #666;
+    }
+
+    #map {
+        width: 600px;
+        height: 400px;
+        border: 2px solid #666;
+    }
+
+    .template {
+        display: none;
+    }
+
+    #footer {
+        width: 1000px;
+        background: url(/images/SFW_footer.png) top no-repeat;
+        background-color: #FFF;
+        padding-top: 10px;
+        text-align: center;
+        font-size: 70%;
+    }
+</style>
+
+<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="/javascripts/markerclusterer.js"></script>
+<script src="/javascripts/data.js"></script>
+<script src="/javascripts/jquery-1.4.2.js"></script>
+
+<script type="text/javascript">
+    function createMarker(map, item, iconUrl) {
+        var point = new google.maps.LatLng(item.latitude, item.longitude);
+        var marker = new google.maps.Marker({
+            position: point,
+            icon: iconUrl
+        });
+        google.maps.event.addListener(marker, 'click', function() {
+            showInfoWindow(map, marker, item);
+        });
+        return marker;
+    }
+
+    function showInfoWindow(map, marker, item) {
+        infoWindow.close();
+        var content = $('#infowindow_template').clone().removeClass('template');
+        content.find('*[name=item_cat]').html(item.category);
+        content.find('*[name=item_lat]').html(item.latitude);
+        content.find('*[name=item_lng]').html(item.longitude);
+        infoWindow.setContent(content[0]);
+        infoWindow.open(map, marker);
+    }
+
+    function toggleMarkers(event) {
+        var mgr = event.data;
+        if (this.checked) {
+            mgr.show();
+        } else {
+            mgr.hide();
+        }
+    }
+
+    function setupCategory(mgr, data, minZoom, iconUrl) {
+        var i = data.length;
+        while (i--) {
+            var item = data[i];
             var point = new google.maps.LatLng(item.latitude, item.longitude);
-            var marker = new google.maps.Marker({
-                position: point,
-                icon: iconUrl
-            });
-            google.maps.event.addListener(marker, 'click', function() {
-                showInfoWindow(map, marker, item);
-            });
-            return marker; 
+            var marker = createMarker(map, point, iconUrl);
+            mgr.addMarker(marker, minZoom);
         }
+    }
 
-        function showInfoWindow(map, marker, item) {
-            infoWindow.close();
-            var content = $('#content_template').clone().removeClass('template');
-            content.find('*[name=item_cat]').html(item.category);
-            content.find('*[name=item_lat]').html(item.latitude);
-            content.find('*[name=item_lng]').html(item.longitude);
-            infoWindow.setContent(content[0]);
-            infoWindow.open(map, marker);
-        }
+    var geocoder = new google.maps.Geocoder();
+    var northeast_limit = new google.maps.LatLng(-37.80, 145.0);
+    var southwest_limit = new google.maps.LatLng(-37.85, 144.9);
+    var search_bounds = new google.maps.LatLngBounds(southwest_limit, northeast_limit);
+    function showAddress(event) {
+        var address = event.data.input.val();
 
-        function toggleMarkers(event) {
-            var mgr = event.data;
-            if (this.checked) {
-              mgr.show();
+        var request = { address: address, bounds: search_bounds, region: 'au' };
+        geocoder.geocode(request, function(results, status) {
+            if (status === google.maps.GeocoderStatus.OK) {
+                event.data.map.setCenter(results[0].geometry.location);
             } else {
-              mgr.hide();
+                alert("Geocode was not successful for the following reason: " + status);
             }
+        });
+        event.preventDefault();
+        return false;
+    }
+
+    var infoWindow = new google.maps.InfoWindow();
+
+
+    function setupMap() {
+        var options = {
+            zoom: 14,
+            center: new google.maps.LatLng(-37.8062649904, 144.96165842),
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+        var map = new google.maps.Map(document.getElementById("map"), options);
+
+        google.maps.event.addListenerOnce(map, 'bounds_changed', function() {
+            setupMarkers(map);
+        });
+        return map;
+    }
+
+    function createMarkerList(data, iconUrl, map) {
+        var markers = new Array();
+        var i = data.length;
+        while (i--) {
+            var item = data[i];
+            var marker = createMarker(map, item, iconUrl);
+            markers.push(marker);
         }
+        return markers;
+    }
 
-        function setupCategory(mgr, data, minZoom, iconUrl) {
-            var i = data.length;
-            while (i--) {
-              var item = data[i];
-              var point = new google.maps.LatLng(item.latitude, item.longitude);
-              var marker = createMarker(map,point,iconUrl);
-              mgr.addMarker(marker, minZoom);
-            }
+    function buildOptions(imageUrl) {
+        var style = [
+            { url: imageUrl, width:32, height: 37 },
+            { url: imageUrl, width:32, height: 37 },
+            { url: imageUrl, width:32, height: 37 },
+            { url: imageUrl, width:32, height: 37 },
+            { url: imageUrl, width:32, height: 37 },
+            { url: imageUrl, width:32, height: 37 }
+        ];
+        return {
+            gridSize: 65,
+            maxZoom: 18,
+            styles: style
         }
+    }
 
-        var geocoder = new google.maps.Geocoder();
-        var northeast_limit = new google.maps.LatLng(-37.80,145.0);
-        var southwest_limit = new google.maps.LatLng(-37.85,144.9);
-        var search_bounds = new google.maps.LatLngBounds(southwest_limit, northeast_limit);
-        function showAddress(event) {
-          var address = event.data.input.val();
+    function setupMarkers(map) {
 
-          var request = { address: address, bounds: search_bounds, region: 'au' };
-          geocoder.geocode(request, function(results, status) {
-              if (status === google.maps.GeocoderStatus.OK) {
-                  event.data.map.setCenter(results[0].geometry.location);
-              } else {
-                  alert("Geocode was not successful for the following reason: " + status);
-              }
-          });
-          event.preventDefault();
-          return false;
-        }
+        var trough = new MarkerClusterer(map,
+                createMarkerList(Horse_Trough, 'http://google-maps-icons.googlecode.com/files/horseriding.png', map),
+                buildOptions('http://google-maps-icons.googlecode.com/files/horseriding.png'));
+        var bin = new MarkerClusterer(map,
+                createMarkerList(Litter_Bin, 'http://google-maps-icons.googlecode.com/files/trash.png', map),
+                buildOptions('http://google-maps-icons.googlecode.com/files/trash.png'));
+        var info = new MarkerClusterer(map,
+                createMarkerList(Information_Pillar, 'http://google-maps-icons.googlecode.com/files/info.png', map),
+                buildOptions('http://google-maps-icons.googlecode.com/files/info.png'));
+        var seat = new MarkerClusterer(map,
+                createMarkerList(Seat, 'http://google-maps-icons.googlecode.com/files/bench.png', map),
+                buildOptions('http://google-maps-icons.googlecode.com/files/bench.png'));
+        var drink = new MarkerClusterer(map,
+                createMarkerList(Drinking_Fountain, 'http://google-maps-icons.googlecode.com/files/drinkingfountain.png', map),
+                buildOptions('http://google-maps-icons.googlecode.com/files/drinkingfountain.png'));
+        var picnic = new MarkerClusterer(map,
+                createMarkerList(Picnic_Setting, 'http://google-maps-icons.googlecode.com/files/picnic.png', map),
+                buildOptions('http://google-maps-icons.googlecode.com/files/picnic.png'));
+        var rails = new MarkerClusterer(map,
+                createMarkerList(Bicycle_Rails.concat(Hoop), 'http://google-maps-icons.googlecode.com/files/bicycleparking.png', map),
+                buildOptions('http://google-maps-icons.googlecode.com/files/bicycleparking.png'));
+        var corral = new MarkerClusterer(map,
+                createMarkerList(Bin_Corral, 'http://google-maps-icons.googlecode.com/files/trash.png', map),
+                buildOptions('http://google-maps-icons.googlecode.com/files/trash.png'));
+        var equip = new MarkerClusterer(map,
+                createMarkerList(Recreation_Equipment_Item, 'http://google-maps-icons.googlecode.com/files/basketball.png', map),
+                buildOptions('http://google-maps-icons.googlecode.com/files/basketball.png'));
+        var bbq = new MarkerClusterer(map,
+                createMarkerList(Barbeque, 'http://google-maps-icons.googlecode.com/files/restaurant-barbecue.png', map),
+                buildOptions('http://google-maps-icons.googlecode.com/files/restaurant-barbecue.png'));
 
-        var infoWindow = new google.maps.InfoWindow();
+    }
 
+    function initialize() {
+        var map = setupMap();
 
-        function setupMap() {
-            var options = {
-                zoom: 14,
-                center: new google.maps.LatLng(-37.8062649904, 144.96165842),
-                mapTypeId: google.maps.MapTypeId.ROADMAP
-            };
-            var map = new google.maps.Map(document.getElementById("map"), options);
-
-            google.maps.event.addListenerOnce(map, 'bounds_changed', function(){
-                setupMarkers(map);
-            });
-            return map;
-        }
-
-        function createMarkerList(data, iconUrl, map) {
-            var markers = new Array();
-            var i = data.length;
-            while (i--) {
-              var item = data[i];
-              var marker = createMarker(map,item,iconUrl);
-              markers.push(marker);
-            }
-            return markers;
-        }
-
-        function buildOptions(imageUrl) {
-            var style = [
-                { url: imageUrl, width:32, height: 37 },
-                { url: imageUrl, width:32, height: 37 },
-                { url: imageUrl, width:32, height: 37 }
-            ];
-            return {
-                gridSize: 65,
-                maxZoom: 18,
-                styles: style
-            }
-        }
-
-        function setupMarkers(map) {
-
-            var trough = new MarkerClusterer(map,
-                    createMarkerList(Horse_Trough, 'http://google-maps-icons.googlecode.com/files/horseriding.png', map),
-                    buildOptions('http://google-maps-icons.googlecode.com/files/horseriding.png'));
-            var bin = new MarkerClusterer(map,
-                    createMarkerList(Litter_Bin, 'http://google-maps-icons.googlecode.com/files/trash.png', map),
-                    buildOptions('http://google-maps-icons.googlecode.com/files/trash.png'));
-            var info = new MarkerClusterer(map,
-                    createMarkerList(Information_Pillar, 'http://google-maps-icons.googlecode.com/files/info.png', map),
-                    buildOptions('http://google-maps-icons.googlecode.com/files/info.png'));
-            var seat = new MarkerClusterer(map,
-                    createMarkerList(Seat, 'http://google-maps-icons.googlecode.com/files/bench.png', map),
-                    buildOptions('http://google-maps-icons.googlecode.com/files/bench.png'));
-            var drink = new MarkerClusterer(map,
-                    createMarkerList(Drinking_Fountain, 'http://google-maps-icons.googlecode.com/files/drinkingfountain.png', map),
-                    buildOptions('http://google-maps-icons.googlecode.com/files/drinkingfountain.png'));
-            var picnic = new MarkerClusterer(map,
-                    createMarkerList(Picnic_Setting, 'http://google-maps-icons.googlecode.com/files/picnic.png', map),
-                    buildOptions('http://google-maps-icons.googlecode.com/files/picnic.png'));
-            var rails = new MarkerClusterer(map,
-                    createMarkerList(Bicycle_Rails.concat(Hoop), 'http://google-maps-icons.googlecode.com/files/bicycleparking.png', map),
-                    buildOptions('http://google-maps-icons.googlecode.com/files/bicycleparking.png'));
-            var corral = new MarkerClusterer(map,
-                    createMarkerList(Bin_Corral, 'http://google-maps-icons.googlecode.com/files/trash.png', map),
-                    buildOptions('http://google-maps-icons.googlecode.com/files/trash.png'));
-            var equip = new MarkerClusterer(map,
-                    createMarkerList(Recreation_Equipment_Item, 'http://google-maps-icons.googlecode.com/files/basketball.png', map),
-                    buildOptions('http://google-maps-icons.googlecode.com/files/basketball.png'));
-            var bbq = new MarkerClusterer(map,
-                    createMarkerList(Barbeque, 'http://google-maps-icons.googlecode.com/files/restaurant-barbecue.png', map),
-                    buildOptions('http://google-maps-icons.googlecode.com/files/restaurant-barbecue.png'));
-
-        }
-
-        function initialize() {
-            var map = setupMap();
-
-            var address_input = $("#address_form input[name='address']");
-            $("#address_form input[name='address_submit']")
-                    .bind("click", {map: map, input: address_input}, showAddress);
-        }
+        var address_input = $("#address_form input[name='address']");
+        $("#address_form input[name='address_submit']")
+                .bind("click", {map: map, input: address_input}, showAddress);
+    }
 
 
-        $(initialize);
-    </script>
+    $(initialize);
+</script>
 
 </head>
 <body>
 <div id="container">
-Here's the map:
-<div id="categories">
-  <form name="category_toggles">
-    <ul id="category_list">
-      <li><label><input type="checkbox" name="trough" checked="true">Horse Troughs</label></li>
-      <li><label><input type="checkbox" name="bin" checked="true">Rubbish Bins</label></li>
-      <li><label><input type="checkbox" name="info" checked="true">Information Pillars</label></li>
-      <li><label><input type="checkbox" name="seat" checked="true">Seats</label></li>
-      <li><label><input type="checkbox" name="drink" checked="true">Drinking Fountains</label></li>
-      <li><label><input type="checkbox" name="picnic" checked="true">Picnic Settings</label></li>
-      <li><label><input type="checkbox" name="rails" checked="true">Bicycle Parking</label></li>
-      <li><label><input type="checkbox" name="corral" checked="true">Bin Corrals</label></li>
-      <li><label><input type="checkbox" name="equip" checked="true">Recreation Equipment Item</label></li>
-      <li><label><input type="checkbox" name="bbq" checked="true">Barbeque</label></li>
-    </ul>
-  </form>
+  <div id="header">
+    <span class="title">Melbourne Street Furniture Warehouse</span>
+  </div>
+  <div id="content">
+    <div id="categories">
+      <form name="category_toggles">
+        <ul id="category_list">
+          <li><label><input type="checkbox" name="trough" checked="true">Horse Troughs</label></li>
+          <li><label><input type="checkbox" name="bin" checked="true">Rubbish Bins</label></li>
+          <li><label><input type="checkbox" name="info" checked="true">Information Pillars</label></li>
+          <li><label><input type="checkbox" name="seat" checked="true">Seats</label></li>
+          <li><label><input type="checkbox" name="drink" checked="true">Drinking Fountains</label></li>
+          <li><label><input type="checkbox" name="picnic" checked="true">Picnic Settings</label></li>
+          <li><label><input type="checkbox" name="rails" checked="true">Bicycle Parking</label></li>
+          <li><label><input type="checkbox" name="corral" checked="true">Bin Corrals</label></li>
+          <li><label><input type="checkbox" name="equip" checked="true">Recreation Equipment Item</label></li>
+          <li><label><input type="checkbox" name="bbq" checked="true">Barbeque</label></li>
+        </ul>
+      </form>
+    </div>
+    <div id="map"></div>
+    <div id="address_form">
+      <form name="address_form">
+        <label for="address">Centre on address:
+          <input type="text" name="address"></label>
+        <input type="submit" name="address_submit">
+      </form>
+    </div>
+  </div>
+  <div id="footer">Created by David Cameron 2010</div>
 </div>
-<div id="map"></div>
-<div id="address_form">
-  <form name="address_form">
-    <label for="address">Centre on address:
-    <input type="text" name="address"></label>
-    <input type="submit" name="address_submit">
-  </form>
-</div>
-</div>
-<div id="content_template" class="template">
+<div id="infowindow_template" class="template">
   <div name="item_cat">template cat</div>
   <div name="item_lat">template lat</div>
   <div name="item_lng">template lng</div>
