Removing categories for the moment, as Marker Clusterer needs to be enhanced to be able to show and hide them.

--- a/app/views/maps_test/show_map.html.erb
+++ b/app/views/maps_test/show_map.html.erb
@@ -3,7 +3,7 @@
 <title>Melbourne Street Furniture Warehouse</title>
 
 <style>
-    form { margin: 0px }
+    form { margin: 0 }
 
     body {
         font-family: Arial, Helvetica, sans-serif;
@@ -258,20 +258,6 @@
   </div>
   <div id="content">
     <div id="categories">
-        <form name="category_toggles" class="category_subbox">
-            <ul id="category_list">
-              <li><label><input type="checkbox" name="trough" checked="true">Horse Troughs</label></li>
-              <li><label><input type="checkbox" name="bin" checked="true">Rubbish Bins</label></li>
-              <li><label><input type="checkbox" name="info" checked="true">Information Pillars</label></li>
-              <li><label><input type="checkbox" name="seat" checked="true">Seats</label></li>
-              <li><label><input type="checkbox" name="drink" checked="true">Drinking Fountains</label></li>
-              <li><label><input type="checkbox" name="picnic" checked="true">Picnic Settings</label></li>
-              <li><label><input type="checkbox" name="rails" checked="true">Bicycle Parking</label></li>
-              <li><label><input type="checkbox" name="corral" checked="true">Bin Corrals</label></li>
-              <li><label><input type="checkbox" name="equip" checked="true">Recreation Equipment Item</label></li>
-              <li><label><input type="checkbox" name="bbq" checked="true">Barbeque</label></li>
-            </ul>
-        </form>
         <form name="address_form" class="category_subbox">
          <label for="address">Centre on address:
             <input type="text" name="address"></label>
