adding more attribution information

--- a/app/views/maps_test/show_map.html.erb
+++ b/app/views/maps_test/show_map.html.erb
@@ -266,7 +266,10 @@
     </div>
     <div id="map"></div>
   </div>
-  <div id="footer">Created by David Cameron 2010</div>
+  <div id="footer">Created by David Cameron 2010<br>
+    Data provided by <a href="http://data.vic.gov.au/">data.vic.gov.au</a><br>
+    Icons from <a href="http://code.google.com/p/google-maps-icons/">Map icons collection</a>
+  </div>
 </div>
 <div id="infowindow_template" class="template">
   <div name="item_cat">template cat</div>
