putting id back on form so wiring up of the address search works.

--- a/app/views/maps_test/show_map.html.erb
+++ b/app/views/maps_test/show_map.html.erb
@@ -258,7 +258,7 @@
   </div>
   <div id="content">
     <div id="categories">
-        <form name="address_form" class="category_subbox">
+        <form name="address_form" id="address_form" class="category_subbox">
          <label for="address">Centre on address:
             <input type="text" name="address"></label>
           <input type="submit" name="address_submit" value="Go">
